Created attachment 79083 [details] Excel XML file that causes import error Overview: When attempting to import the attached .XML file (generated by MS Excel) the import fails and the following message is displayed: General Error General input/output error. Steps to Reproduce: 1.) Uncompress / extract the attached file (I compressed it to upload it) 2.) Attempt to open the uncompressed file .xml. Actual Results: The import / open fails and Error message is displayed: General Error General input/output error. Expected Results: It should import and open the spreadsheet in Calc. Build Date & Platform: This bug was noticed as far back to 3.5 and 3.6. Additional Builds and Platforms: This problem also occurs with Libre Office 4.0.2 on Windows 7 Professional. Additional Information: It is not only this one spreadsheet file. I can provide additional example files if required.
Updating version as you've said it existed in 3.5 - Version field reflects the oldest version that we see the bug, we use comments to say "also verified on version...." - this is to track if a bug was introduced (ie. regression) at some later date. I can confirm this: Bodhi Linux LibreOffice version 4.0.2.2 release Marking as: New (confirmed) Major - cannot open the file at all Medium - default is high but this is one test file, it could be a bigger issue but as of now we have a single test case.
Created attachment 79109 [details] Adding second Excel XML file that Calc can't import / open This is another XML file produced by Excel that Calc can not open. I could provide more but I have a very strong suspicion that there is a common cause. If a cause is found I would be more than willing to provide additional files to confirm that it is the same problem encountered with multiple files.
Thanks for the additional info - likely a filters issue but going to add Kohei to see if he has any tips or wants to tackle it. Kohei - thoughts on this one?
This is an Excel 2003 XML format that only Excel 2003 generated. The later versions all moved to xlsx. We don't even have a real filter for this (only one based on XSLT). So, it's very unlikely that we would spend serious effort into fixing this. Check with Peter (CC'ed) to see if he is interested. He's shown interest with XSLT based filters (and especially the Excel 2003 XML filter) in the past.
*** Bug 65180 has been marked as a duplicate of this bug. ***
Created attachment 80066 [details] XML file that won't open
I'm not sure if it's useful but we parse these files to extract and work on the contents. I believe this is done using Perl possibly along the lines of: http://games.greggman.com/game/excel_perl_xml/ And: http://search.cpan.org/~jmcnamara/Spreadsheet-ParseExcel-0.59/lib/Spreadsheet/ParseExcel.pm If it would help I can find out more in which case let me know.
Kohei Yoshida committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=b46688a663b8709e0e0795f25ef8961db1f46cba fdo#64423: Detect BIFF 2 (and 3) file format like we should. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Scratch that. I put the wrong bugzilla number.
Created attachment 87162 [details] Errors written to CLI when opening .XML file When launching soffice binary from the command line and then attempting to open the file 7-Divisions-HUCS.xml there are various errors that are written out to the command line terminal e.g.: runtime error: file file:///usr/lib/libreoffice/program/../share/xslt/import/spreadsheetml/spreadsheetml2ooo.xsl line 6131 element param xsltApplyXSLTTemplate: A potential infinite template recursion was detected. You can adjust xsltMaxDepth (--maxdepth) in order to raise the maximum number of nested template calls and variables/params (currently set to 3000).
I took a look at the referenced bug, 38361, but there are no tags in the files I supplied. There are however & and " tags in it although I'm not sure if this makes any difference: $ grep "&" 7-Divisions-HUCS.xml x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> <Cell ss:StyleID="s81"><Data ss:Type="String">CallForwardOnNotRegisteredToVoiceMail </Data></Cell> <Cell ss:StyleID="s81"><Data ss:Type="String">CallForwardOnNotRegisteredToVoiceMail </Data></Cell> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> xmlns="http://www.w3.org/TR/REC-html40"> </Font></Data></Comment></Cell> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> <Cell ss:StyleID="s67"><Data ss:Type="String">Note: Call Agent is optional when multi-tenant = "true" and mandatory when multi-tenant = "false".</Data></Cell> <Cell ss:StyleID="s104"><Data ss:Type="String">EXT:100 </Data></Cell> <Cell ss:StyleID="s104"><Data ss:Type="String">EXT:100 </Data></Cell> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> <Cell ss:StyleID="s104"><Data ss:Type="String"># </Data></Cell> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> x:Data="&C&"Times New Roman,Regular"&12&A"/> x:Data="&C&"Times New Roman,Regular"&12Page &P"/> liam@liam-544:~$
The problem lies in some worksheets defining about 16200 columns. The current implementation supports only about 3000 columns.
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: *Test to see if the bug is still present on a currently supported version of LibreOffice (4.4.1 or later) https://www.libreoffice.org/download/ *If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior *If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System Please DO NOT *Update the version field *Reply via email (please reply directly on the bug tracker) *Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 4b. If the bug was not present in 3.3 - add "regression" to keyword Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa Thank you for your help! -- The LibreOffice QA Team This NEW Message was generated on: 2015-04-18
Still erroring. Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+ Build ID: 437210d58f32177ef1829d704f7f4d2f1bbfbfdd TinderBox: Win-x86@39, Branch:master, Time: 2015-06-18_07:21:56 Locale: fi-FI (fi_FI)
Also occurs in: LibreOffice 4.4.3 Running on: Ubuntu 14.04 64 bit
Regression since it was opening fine with LO 3.3.4. Cannot be open with LO 3.4.
Adding keyword 'bibisectRequest' to see whether this regression is already present in the oldest build of bibisect-43all repository or not. In case it's already present, change 'bibisectRequest' to 'preBibisect'. Otherwise, change 'bibisectRequest' to 'bibisected' and add a comment with the output from 'git bisect log'
Also occurs in: LibreOffice 5.3.5.2 and 5.4.0.2 Running on: Arch as of 2017-08-22.
Created attachment 139843 [details] Workaround Replace file "/usr/lib/libreoffice/share/xslt/import/spreadsheetml/spreadsheetml2ooo.xsl" by this version; or just appoint Calc to it (Tools > XML Filter Settings... > MS Excel 2003 XML > Edit... > Transformation > XSLT for import: > Browse...)
Works fine in current master Version: 6.1.0.0.alpha0+ Build ID: a488c7ad2763b944713997911c1ddb0315d8c93f CPU threads: 2; OS: Mac OS X 10.12.6; UI render: default; TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-03-26_00:38:29 Locale: en-US (en_US.UTF-8); Calc: group