fdo#64423: Detect BIFF 2 (and 3) file format like we should.

Change-Id: I1421cca4b0ef8e9410aab5725cc5a8d9cffef7a9